# biqt

./: .clang-format  .gitignore  CMakeLists.centos7.cmake  CMakeLists.txt  CMakeLists.ubuntu.cmake  INSTALL.md  README.md  make-docker.sh  setup_provider.py
cxx/: BIQT-cli.cpp  BIQT.cpp  BIQT.h  ProviderInterface.h
cxx/windows/: dirent.h  getopt.h  libgen.h
doc/: biqt.vsd
docker/: Dockerfile  openssl.cnf
docker.ubuntu/: Dockerfile
java/: pom.xml
java/src/c/: CMakeLists.txt  java_provider.cpp  java_provider.h  jnihelper.c  jnihelper.h  org_mitre_biqt_BIQT.cpp  org_mitre_biqt_BIQT.h
java/src/main/java/cz/adamh/utils/: NativeUtils.java
java/src/main/java/org/mitre/biqt/: BIQT.java  Provider.java  ProviderInfo.java
java/src/test/java/org/mitre/biqt/: TestBIQT.java
templates/: CMakeLists.txt  Provider.cpp  Provider.h  descriptor.json
